[gd_scene load_steps=28 format=2]

[ext_resource path="res://Scenes&Scripts/FlyingPlayer/FlyingPlayer.gd" type="Script" id=1]
[ext_resource path="res://img/space/space man.png" type="Texture" id=2]
[ext_resource path="res://img/space/space manH.png" type="Texture" id=3]

[sub_resource type="OccluderPolygon2D" id=1]
polygon = PoolVector2Array( 52, 29.5, 2, 40.5, -51.5, 31, -51, 10, 1.5, 2.5, 49.5, 7.5 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 340, 500 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 340, 0, 340, 500 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 680, 0, 340, 500 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1020, 0, 340, 500 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1360, 0, 340, 500 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 1000, 340, 500 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 340, 1000, 340, 500 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 680, 1000, 340, 500 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1020, 1000, 340, 500 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1360, 1000, 340, 500 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 1000, 340, 500 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 340, 1000, 340, 500 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 680, 1000, 340, 500 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1020, 1000, 340, 500 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1360, 1000, 340, 500 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 500, 340, 500 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 340, 500, 340, 500 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 680, 500, 340, 500 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1020, 500, 340, 500 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1360, 500, 340, 500 )

[sub_resource type="SpriteFrames" id=22]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "Front",
"speed": 10.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "FlyingLeft",
"speed": 10.0
}, {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "FlyingRight",
"speed": 10.0
}, {
"frames": [ SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ) ],
"loop": true,
"name": "Behind",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=23]
radius = 41.0
height = 0.0

[sub_resource type="CapsuleShape2D" id=24]
radius = 67.2915
height = 0.0

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
position = Vector2( 0, 76.5 )
z_index = 3
occluder = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -14.3811, 0.706299 )
z_index = 4
frames = SubResource( 22 )
animation = "FlyingLeft"
frame = 3
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -6.5, 78.5 )
shape = SubResource( 23 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 3.98819, 49.2831 )
shape = SubResource( 24 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
